[tool.poetry]
name = "signaling-server"
version = "0.1.0"
description = ""
authors = ["Vida Péter <peter.vida@atos.net>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.780"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
